--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,14 +27,14 @@ services:
     env_file:
       - ".env.local"
 
-  # frontend:
-  #   build: ./frontend
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - backend
-  #   environment:
-  #     NODE_ENV: development
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    environment:
+      NODE_ENV: development
 
 volumes:
   postgres-data:
